# Dodo

./: .gitignore  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8hpp.html  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  CMakeLists.txt  CTestConfig.cmake  DodoContext_8cpp.html  DodoContext_8cpp__incl.map  DodoContext_8cpp__incl.md5  DodoContext_8hpp.html  DodoContext_8hpp__dep__incl.map  DodoContext_8hpp__dep__incl.md5  DodoContext_8hpp__incl.map  DodoContext_8hpp__incl.md5  DodoContext_8hpp_source.html  GLFWContext_8cpp.html  GLFWContext_8cpp__incl.map  GLFWContext_8cpp__incl.md5  GLFWContext_8hpp.html  GLFWContext_8hpp__dep__incl.map  GLFWContext_8hpp__dep__incl.md5  GLFWContext_8hpp__incl.map  GLFWContext_8hpp__incl.md5  GLFWContext_8hpp_source.html  README.md  VulkanContext_8cpp.html  VulkanContext_8cpp__incl.map  VulkanContext_8cpp__incl.md5  VulkanContext_8hpp.html  VulkanContext_8hpp__dep__incl.map  VulkanContext_8hpp__dep__incl.md5  VulkanContext_8hpp__incl.map  VulkanContext_8hpp__incl.md5  VulkanContext_8hpp_source.html  (+228 more)
.github/workflows/: build.yml  linter.yml  tests.yml
CMake/: FindVulkan.cmake  Findglm.cmake
docs/: Doxyfile
include/dodo/core/: App.hpp  DodoContext.hpp  GLFWContext.hpp  VulkanContext.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+14 more)
src/dodo/core/: App.cpp  DodoContext.cpp  GLFWContext.cpp  VulkanContext.cpp
tests/: CMakeLists.txt  general_tests.cpp
